--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "69811125",
    "metadata": {},
    "outputs": [],
@@ -2684,12 +2684,16 @@
     "X_train_scaled = scaler.fit_transform(X_important)\n",
     "\n",
     "# Transform pada data Test (X_test_important)\n",
-    "X_test_final = scaler.transform(X_test_important)"
+    "X_test_final = scaler.transform(X_test_important)\n",
+    "\n",
+    "# Mengubah hasil menjadi DataFrame untuk analisis lebih lanjut\n",
+    "X_train_scaled = pd.DataFrame(X_train_scaled, columns=X_important.columns)\n",
+    "X_test_final = pd.DataFrame(X_test_final, columns=X_test_important.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "1cc171d7",
    "metadata": {},
    "outputs": [
@@ -2712,8 +2716,8 @@
     "print(\"Distribusi kelas setelah SMOTE:\", Counter(y_train_resampled))\n",
     "\n",
     "# Mengubah hasil menjadi DataFrame\n",
-    "X_train_final = pd.DataFrame(X_train_resampled, columns=X_important.columns)\n",
-    "y_resampled = pd.Series(y_train_resampled, name='Status')"
+    "X_train_resampled = pd.DataFrame(X_train_resampled, columns=X_important.columns)\n",
+    "y_train_resampled = pd.Series(y_train_resampled, name='Status')"
    ]
   },
   {
