--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "84153ea1",
    "metadata": {},
    "outputs": [],
@@ -39,6 +39,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import joblib\n",
+    "import os\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from collections import Counter\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -7412,25 +7413,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 101,
    "id": "fe9b3e72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['rdf_model.pkl']"
+       "['model\\\\rdf_model.pkl']"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Save best model\n",
-    "\n",
-    "joblib.dump(rdf_model, 'rdf_model.pkl')"
+    "# Create name folder 'model'\n",
+    "os.makedirs('model')\n",
+    "# Gabungkan path\n",
+    "model_path = os.path.join('model', 'rdf_model.pkl')\n",
+    "# Save model\n",
+    "joblib.dump(rdf_model, model_path)"
    ]
   }
  ],
